# Talking-BI

./: .env.example  .gitignore  ARCHITECTURE.md  README.md  TALKING_BI_V2_PROJECT_REFERENCE.md  migrate_to_v35.py  pyproject.toml
app/: __init__.py  main.py
app/api/routes/: frontend.py  query.py  session.py  system.py  upload.py
app/api/schemas/: dataset.py  query.py  response.py
app/core/: config.py  dataset.py  state.py
app/services/: conversation_manager.py  data_preparation.py  datasets.py  db_connectors.py  insight_engine.py  planner.py  result_cache.py
app/services/agent/: classifier.py  executor.py  guardrails.py  planner.py
app/services/data/: duckdb_store.py
app/services/execution/: pandas_executor.py  sql_executor.py  unified.py
app/services/llm/: __init__.py  client.py  reasoning.py
app/services/memory/: __init__.py  session_store.py
app/services/persistence/: cache.py  metadata_db.py
app/services/tools/: base.py  reflection.py  schema.py  sql.py  viz.py
app/services/visualization/: __init__.py  chart_resolver.py  plotly_builder.py
app/web/: app.js  index.html  styles.css
tests/: test_api.py  test_data_preparation_and_dashboard.py  test_database_registration.py  test_db_connectors.py  test_file_sql_execution.py  test_insight_engine.py  test_live_database_integrations.py  test_llm_reasoning.py  test_query_history.py  test_upload_and_session.py
