[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "talking-bi-v2"
version = "0.1.0"
description = "State-driven conversational business intelligence backend"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "pandas>=2.2.0",
    "duckdb>=1.0.0",
    "plotly>=5.22.0",
    "python-multipart>=0.0.9",
    "openpyxl>=3.1.0",
    "aiofiles>=23.2.1",
    "httpx>=0.27.0",
    "sqlalchemy>=2.0.0",
    "psycopg[binary]>=3.3.0",
    "pymysql>=1.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
